--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,3 +34,5 @@ set -g pane-border-fg '#555555'
 
 # bind to reload config
 bind r source-file ~/.tmux.conf
+
+set -g default-terminal "screen-256color"
