--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,3 +36,5 @@ set -g pane-border-fg '#555555'
 bind r source-file ~/.tmux.conf
 
 set -g default-terminal "screen-256color"
+
+bind-key a  send-prefix
