--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,3 +38,10 @@ bind r source-file ~/.tmux.conf
 set -g default-terminal "screen-256color"
 
 bind-key a  send-prefix
+
+bind j resize-pane -D 10
+bind k resize-pane -U 10
+bind l resize-pane -L 10
+bind h resize-pane -R 10
+
+
