--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,3 +1,5 @@
 {
- "diagnostic.checkCurrentLine": true
+ "diagnostic.checkCurrentLine": true,
+ "tsserver.npm": "/usr/bin/npm",
+ "tsserver.log": "verbose"
 }
