--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,5 +44,4 @@ bind k resize-pane -U 10
 bind l resize-pane -L 10
 bind h resize-pane -R 10
 
-set-window-option -g window-status-current-style bg=red
-
+set-window-option -g window-status-current-style bg=green,bold
