--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set -g status-utf8 on                       # enable utf-8
+#set -g status-utf8 on                       # enable utf-8
 set -g history-limit 100000                 # scrollback buffer n lines
 
 # start window indexing at one instead of zero
@@ -25,12 +25,6 @@ set -g status-fg '#ffffff'
 set -g status-left ' '
 set -g window-status-format '#I #W'
 set -g window-status-current-format ' #I #W '
-setw -g window-status-current-bg '#55ff55'
-setw -g window-status-current-fg '#000000'
-
-# pane border colors
-set -g pane-active-border-fg '#bbbbbb'
-set -g pane-border-fg '#555555'
 
 # bind to reload config
 bind r source-file ~/.tmux.conf
@@ -47,3 +41,14 @@ bind h resize-pane -R 10
 bind-key -T prefix s choose-tree -s
 
 set-window-option -g window-status-current-style bg=green,bold
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+
+set -g @plugin "arcticicestudio/nord-tmux"
+
+
+run '~/.tmux/plugins/tpm/tpm'
+
+
