--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,6 +48,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin "arcticicestudio/nord-tmux"
 
+ set -g @plugin 'erikw/tmux-powerline'
+
 
 run '~/.tmux/plugins/tpm/tpm'
 
