--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,13 +44,10 @@ set-window-option -g window-status-current-style bg=green,bold
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
-
 set -g @plugin "arcticicestudio/nord-tmux"
-
- set -g @plugin 'erikw/tmux-powerline'
-
+set -g @plugin 'erikw/tmux-powerline'
 
 run '~/.tmux/plugins/tpm/tpm'
 
-
+set -g status-left-length 150
+set -g status-right-length 180
