--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,12 +9,12 @@ set -g prefix C-a
 bind-key C-a last-window
 
 # key bindings for horizontal and vertical panes
-unbind %
+#unbind %
 bind | split-window -h
 bind - split-window -v
 
 # enable window titles
-#set -g set-titles on
+set -g set-titles on
 
 # window title string (uses statusbar variables)
 set -g set-titles-string '#T'
@@ -22,7 +22,6 @@ set -g set-titles-string '#T'
 # status bar with load and time
 set -g status-bg '#4e4e4e'
 set -g status-fg '#ffffff'
-set -g status-left ' '
 set -g window-status-format '#I #W'
 set -g window-status-current-format ' #I #W '
 
@@ -33,21 +32,42 @@ set -g default-terminal "screen-256color"
 
 bind-key a  send-prefix
 
-bind j resize-pane -D 10
-bind k resize-pane -U 10
-bind l resize-pane -L 10
-bind h resize-pane -R 10
+bind-key -r -T prefix       M-Up              resize-pane -U 5
+bind-key -r -T prefix       M-Down            resize-pane -D 5
+bind-key -r -T prefix       M-Left            resize-pane -L 5
+bind-key -r -T prefix       M-Right           resize-pane -R 5
+
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+bind h select-pane -L
+
+set -g @tpm-install 'I'  # Use capital I
+
+set -g status-left-length 50
+set -g status-right-length 180
 
 bind-key -T prefix s choose-tree -s
 
 set-window-option -g window-status-current-style bg=green,bold
 
+set-option -g status on
+set-option -g status-interval 2
+set-option -g status-justify "left"
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+set-option -g status-left ""
+set-option -g status-right "#(~/.tmux/plugins/tmux-powerline/powerline.sh right)"
+set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
+
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin "arcticicestudio/nord-tmux"
 set -g @plugin 'erikw/tmux-powerline'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 run '~/.tmux/plugins/tpm/tpm'
 
-set -g status-left-length 150
-set -g status-right-length 180
+
